fix use of deprecated methods in test